--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -14,3 +14,12 @@ jobs:
           echo "Hello World!3"
       - name: Print goodbye
         run: echo "Done - bye!"
+  Second-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print greeting
+        run: |
+          echo "Hello World!4"
+          echo "Hello World!5"
+      - name: Print goodbye
+        run: echo "Done - bye!"
