--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -44,3 +44,16 @@ jobs:
         run: npm install
       - name: Run tests
         run: npm run test
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: get code
+        uses: actions/checkout@v3
+      - name: Install node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+      - name: Install dependencies
+        run: npm install
+      - name: deploy
+        run: npm run build
