--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -27,7 +27,7 @@
 name: push actions
 
 on:
-  [push, workflow_dispatch]
+  [workflow_dispatch]
   # push:
   #   branches: ["workflow"]
   # workflow_dispatch:
