--- a/.github/workflows/Output.yml
+++ b/.github/workflows/Output.yml
@@ -1,10 +1,8 @@
 name: Output information
-on:
-  workflow_dispatch:
-
+on: [push, workflow_dispatch]
 jobs:
   info:
     runs-on: ubuntu-latest
     steps:
-      - name: Output github context data
+      - name: Output github context
         run: echo "${{toJson(github)}}"
