--- a/.github/workflows/pull-request-open-action.yml
+++ b/.github/workflows/pull-request-open-action.yml
@@ -8,5 +8,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Output github context
+      - name: Pull request action flow
         run: echo "${{toJson(github)}}"
